Implemented goldenberg. rejection is real tho

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(lattice)
 
 set(CMAKE_CXX_STANDARD 11)
 include_directories(/usr/local/include/eigen3/)
-set(SOURCE_FILES lattice.cpp main.cpp)
+set(SOURCE_FILES lattice.cpp main.cpp agent.cpp agent.h simulation.cpp simulation.h)
 add_executable(lattice ${SOURCE_FILES})
